<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">质感引擎</string>
    <string name="app_target_sdk">SDK %1$s</string>
    <string name="app_min_sdk">SDK %1$s</string>
    <string name="app_version_name">版本名称: %1$s</string>
    <string name="app_version_code">版本代码: %1$s</string>
    <string name="app_package">package</string>
    <string name="app_size">size</string>
    <string name="app_version">version</string>
    <string name="start_vibration">开始振动</string>
    <string name="WeChat">微信</string>
    <string name="Help">帮助</string>
    <string name="about_dialog_body">
        <![CDATA[为了更好的了解Android知识以及提升自己的动手能力<strong>MaterialDesign引擎</strong>
        </b>是一款功能多样的开源小工具箱（确信）😙<br />
      <br />
      由<b>Mr.Chen</b>设计和开发😙。<br />
      您也可以查看我的<a href="https://gitee.com/qiancxy/Functions">Gitee</a>和<a href="https://space.bilibili.com/159360013?spm_id_from=333.1007.0.0">哔哩哔哩</a>😎<br />
      <br />目前正在完善程序的其他有趣内容😁，欢迎（不欢迎bushi）各位对
      <a href="https://gitee.com/qiancxy/Functions">此App</a>
      进行评价和提出意见~~~（咕噜咕噜作者不知道会咕咕多久）<br />
      ~~~ヾ(≧▽≦*)o ]]>
    </string>
    <string name="menu_confirm_perfmon_plus">使用Perfmon+ 来监控系统CPU、GPU、Mem等占用情况，需要root权限才能完整查看负载，无root只能查看频率。请确保授予root权限再使用。\n支持的功能有：\n1.cpu频率监控\n2.cpu负载监控\n3.cpubw频率监控\n4.电流监控\n5.gpu频率监控\n6.gpubw频率监控\n7.gpu负载监控\n8.m4m频率监控\n9.温度监控\n10.内存监控\n11.mincpubw监控\n12.sc bus频率监控\n13.fps监控</string>
    <string name="refresh">刷新</string>
    <string name="tag">tag</string>
    <string name="exit">退出</string>
    <string name="confirm_exit">确认退出吗啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊哼哼啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊</string>
    <string name="confirm">确认</string>
    <string name="support_developers">支持开发者</string>
    <string name="feedback">问题反馈</string>
    <string name="toast">Toast</string>
    <string name="please_close_app_first">请先关闭悬浮窗 再打开软件</string>
    <string name="support_cpufreq_mo">支持cpu频率监控：</string>
    <string name="support_cpuload_mo">支持cpu负载监控：</string>
    <string name="support_cpubw_mo">支持cpubw频率监控：</string>
    <string name="support_current_mo">支持电流监控：</string>
    <string name="support_gpufreq_mo">支持gpu频率监控：</string>
    <string name="support_gpuload_mo">支持gpu负载监控：</string>
    <string name="support_m4mfreq_mo">支持m4m频率监控：</string>
    <string name="support_thermal_mo">支持温度监控：</string>
    <string name="support_mem_mo">支持内存监控：</string>
    <string name="not_supported_reason">* 不支持的项目可能是你的设备真的不支持，也有可能是因为SELinux的阻挠。</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="show_floating_window">打开悬浮窗</string>
    <string name="permissive_selinux">关闭SELinux (ROOT)</string>
    <string name="permission_denied">没有ROOT权限</string>
    <string name="permissive_done">执行完毕 请重新打开软件</string>
    <string name="permissive_selinux_description">* 并不是真正的关闭SELinux 仅仅只是make it permissive\n* 此操作可能在一些设备上诱发崩溃\n* 你可以通过长按“关闭SELinux按钮”来重新启用SELinux</string>
    <string name="visit_github">访问Github </string>
    <string name="visit_coolapk">| 访问酷安（给个五星好评吧）</string>
    <string name="offline">离线</string>
    <string name="temp">"温度 "</string>
    <string name="mem">"内存 "</string>
    <string name="current">"电流 "</string>
    <string name="close">关闭</string>
    <string name="refresh_interval">刷新时间间隔(ms)</string>
    <string name="default_value">默认</string>
    <string name="interval_notice">* 刷新时间间隔过短将会造成额外的CPU负载</string>
    <string name="reverse_current">反转电流读数</string>
    <string name="size_multiple">窗体放缩倍数</string>
    <string name="moni_ctl">监控控制</string>
    <string name="show_cpufreq">显示cpu频率</string>
    <string name="show_cpubw">显示cpubw频率</string>
    <string name="show_cpuload">显示cpu负载</string>
    <string name="show_current">显示电流信息</string>
    <string name="show_gpufreq">显示gpu频率</string>
    <string name="show_gpuload">显示gpu负载</string>
    <string name="show_m4m">显示m4m频率</string>
    <string name="show_mem">显示内存使用率</string>
    <string name="show_thermal">显示温度</string>
    <string name="show_mincpubw">显示mincpubw</string>
    <string name="show_gpubw">显示gpubw</string>
    <string name="support_gpubw_mo">支持gpubw频率监控：</string>
    <string name="show_llcbw">显示system cache bus频率</string>
    <string name="support_llcbw_mo">支持system cache bw监控：</string>
    <string name="window_width">窗体宽度</string>
    <string name="window_height">窗体高度</string>
    <string name="show_fps">显示fps</string>
    <string name="support_fps_mo">支持fps监控：</string>
    <string name="skip_first_screen_str">跳过兼容性检测页面</string>
    <string name="skip_first_screen_str2">启用这个选项后，启动应用时的兼容性检查页面将会被跳过，这意味着启动应用时监视器页面将会被直接打开。\n如果你想要关闭这个选项，请长按监视器页面的“关闭”按钮。</string>
    <string name="notice">注意</string>
    <string name="ok">我明白了</string>
    <string name="cancel">取消</string>
    <string name="skip_first_screen_str_disabled">跳过兼容性检测页面已禁用</string>
    <string name="enforce_done">SELinux已启用！请重启本应用</string>
    <string name="perfmon_plus">Perfmon+</string>
    <string name="require_restart_app">需要重启应用才能生效</string>
    <string name="html_back">后退</string>
    <string name="html_clear_all">清除数据</string>
    <string name="html_refresh">刷新</string>
    <string name="html_stop">停止加载</string>
    <string name="html_forward">前进</string>
    <string name="input_text">请输入文字</string>
    <string name="grant_permission">MDEngine在部分情况下需要存储权限，你可以在打开App时立即赋予或以后授权，拒绝后不影响大部分功能正常使用，请及时授权必要权限。</string>
    <string name="isShowAgain">是否再次询问</string>
    <string name="countdown_format">剩余： %d 秒</string>
    <string name="current_font_size">当前：%s%%</string>
    <string name="Enter_Duration">输入持续时间（以秒为单位，不超过10秒）</string>
    <string name="Stop_Vibration">停止振动</string>
    <string name="activity_main_menu_devote">支持我们，反馈建议</string>
    <string name="version">Version: %1$s (%2$d)</string>
    <string name="size">Size: %1$s</string>
    <string name="usage_instructions">轻松查看管理手机已安装应用，点击搜索框可搜索应用名称或包名，点击右上角三点图标可刷新显示应用。\n\n点击任意应用弹出操作选项。\n应用信息：查看应用签名，应用权限，四大组件以及大量基础信息，如应用名称、包名、版本、版本序号、大小、sdk版本、安装来源、签名信息等。\n打开应用：直接启动或在应用商店搜索该应用。\n清除数据：清除当前应用的数据，包括是否在当前用户上的应用。\n卸载应用：卸载当前用户的应用或者所有用户的应用，保留数据卸载等。\n冻结/解冻：更改应用的可见性，限制使用、停用应用、完全隐藏。\ndex2oat：dex2oat编译可提升(低端机)运行应用时的响应速度，但会显著增加存储空间占用。\n分享应用：分享该应用的安装包。\n提取安装包：提取应用安装包至本地</string>
    <string name="sensor_type_accelerometer">加速度传感器</string>
    <string name="sensor_type_magnetic_field">磁场传感器</string>
    <string name="sensor_type_orientation">方向传感器</string>
    <string name="sensor_type_gravity">重力传感器</string>
    <string name="sensor_type_linear_acceleration">线性加速度传感器</string>
    <string name="sensor_type_rotation_vector">旋转矢量传感器</string>
    <string name="sensor_type_gyroscope">陀螺仪</string>
    <string name="sensor_type_light">光线传感器</string>
    <string name="sensor_type_proximity">距离传感器</string>
    <string name="sensor_type_game_rotation_vector">游戏旋转矢量传感器</string>
    <string name="sensor_type_field_uncalibrated">未校准磁场传感器</string>
    <string name="sensor_type_gyroscope_uncalibrated">未校准陀螺仪</string>
    <string name="sensor_type_accelerometer_uncalibrated">未校准加速度传感器</string>
    <string name="sensor_type_significant_motion">大幅动作传感器</string>
    <string name="sensor_type_step_counter">计步传感器</string>
    <string name="sensor_type_step_detector">计步传感器</string>
    <string name="sensor_type_geomagnetic_rotation_vector">地磁旋转矢量传感器</string>
    <string name="sensor_type_stationry_detect">静止检测传感器</string>
    <string name="sensor_type_motion_detect">运动检测传感器</string>
    <string name="sensor_type_ccd_tilt">倾斜传感器</string>
    <string name="device_name">设备名称</string>
    <string name="model">型号</string>
    <string name="manufacturer">制造商</string>
    <string name="tab_device">设备</string>
    <string name="board">主板</string>
    <string name="hardware">平台</string>
    <string name="brand">品牌</string>
    <string name="android_device_id">安卓设备ID</string>
    <string name="hardware_serial">硬件序列号</string>
    <string name="build_fingerprint">设备指纹</string>
    <string name="device_signal_type">设备信号类型</string>
    <string name="network_operator">运营商</string>
    <string name="network_type">网络类型</string>
    <string name="wifi_mac_address">WLAN MAC 地址</string>
    <string name="bluetooth_mac_address">蓝牙 MAC 地址</string>
    <string name="adb_debug">USB调试</string>
    <string name="total_memory">%d MB</string>
    <string name="used_memory">%d</string>
    <string name="free_memory">%d</string>
    <string name="memory_usage">%d%%</string>
    <string name="todo">TODO</string>
    <string name="z">z:</string>
    <string name="y">y:</string>
    <string name="x">x:</string>
    <string name="add_fingerprint_finished_button_text">完成</string>
    <string name="execute_success">执行成功</string>
    <string name="execute_fail">执行失败</string>
    <string name="execute_wait">正在执行，请稍等…</string>
    <string name="btn_confirm">确定</string>
    <string name="app_chooser_search_hint">输入应用名/包名进行搜索</string>
    <string name="item_chooser_search_hint">搜索可选择项</string>
    <string name="select_all">全选</string>
    <string name="help_title">说明提示</string>
    <string name="kr_script_config">kr-script.conf</string>
    <string name="btn_exit">退出</string>
    <string name="please_wait">请稍等</string>
    <string name="btn_continue">继续</string>
    <string name="app_selected_none">一个应用也没有选中！</string>
    <string name="transparent_ui">界面透明</string>
    <string name="kr_write_external_storage">需要读写外置存储权限！</string>
    <string name="external_application_opening">外部应用打开</string>
    <string name="copy_link">复制链接</string>
    <string name="error_root">抱歉，没有获取到ROOT权限</string>
    <string name="btn_retry">重试</string>
    <string name="error_su_timeout">等待超时，请确保你的Root管理器正在后台运行，并重试！\n\n 请确保你没有阻止“授权管理器(SuperSu、Magisk Manager等)”自启动，并允许后台弹出窗口、显示悬浮窗等权限。如果一直没有弹出授权对话框，建议重启手机再试！</string>
    <string name="auto_start">开机自启(要允许MDEngine自启动)</string>
    <string name="boot_after_auto_modify">开机后自动修改</string>
    <string name="system_modify_dpi_dpi">DPI</string>
    <string name="system_modify_dpi_min_example">min:96</string>
    <string name="system_modify_dpi_min_height">min:480</string>
    <string name="system_modify_dpi_and">×</string>
    <string name="system_modify_dpi_min_width">min:320</string>
    <string name="system_modify_dpi_quick_change">快速更改（Android7.0+）</string>
    <string name="system_modify_dpi_resolution">分辨率</string>
    <string name="system_modify_dpi_hd">HD</string>
    <string name="system_modify_dpi_fhd">FHD</string>
    <string name="system_modify_dpi_2k">2K</string>
    <string name="system_modify_dpi_4k">4K</string>
    <string name="system_modify_dpi_reset">重置</string>
    <string name="system_modify_dpi_warn">警告：修改分辨率、DPI可能导致触摸失灵，或界面错位无法正常操作！</string>
    <string name="system_modify_mac_mac">MAC</string>
    <string name="system_modify_mac_min_example">min:96</string>
    <string name="cpu_control_min_frequency">最小频率</string>
    <string name="cpu_control_min_freq">Min Freq</string>
    <string name="cpu_control_max_frequency">最大频率</string>
    <string name="cpu_control_max_freq">Max Freq</string>
    <string name="cpu_control_scheduling_mode">调度模式</string>
    <string name="cpu_control_governor">Governor</string>
    <string name="cpu_control_fine_tune_parameters">微调参数</string>
    <string name="cpu_control_click_to_view">点击查看</string>
    <string name="dialog_system_modify_device_inner">预设模板</string>
    <string name="menu_power">电源</string>
    <string name="menu_control">控制台</string>
    <string name="menu_check_permission">检查权限</string>
    <string name="menu_change_icon">更改图标</string>
    <string name="menu_restore_default_icon">恢复默认图标</string>
</resources>