<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/start_menu_graph"
        android:icon="@drawable/ic_graph"
        android:orderInCategory="100"
        android:title="@string/menu_control"
        android:visible="true"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/start_menu_power"
        android:icon="@drawable/ic_power"
        android:orderInCategory="100"
        android:title="@string/menu_power"
        android:visible="true"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/start_menu_check_permission"
        android:title="@string/menu_check_permission"
        app:showAsAction="never" />

    <item
        android:id="@+id/start_menu_change_icon"
        android:title="@string/menu_change_icon"
        app:showAsAction="never" />

    <item
        android:id="@+id/start_menu_default_icon"
        android:title="@string/menu_restore_default_icon"
        app:showAsAction="never" />

</menu>