<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12dp">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dialog_system_modify_mac_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/system_modify_mac_mac"
            android:inputType="text"
            android:maxLength="18" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/system_modify_mac_min_example"
        android:text="@string/auto_start"
        android:textColor="#888"
        android:textSize="12sp" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/dialog_system_modify_mac_autochange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="10dp"
        android:text="@string/boot_after_auto_modify" />
</LinearLayout>