<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="12dp">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/background"
            app:cardCornerRadius="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/confirm_title"
                    style="@style/dialogTitle"
                    android:text="@string/error_root" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/confirm_message"
                    style="@style/dialogDesc"
                    android:text="@string/error_su_timeout" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_exit"
                style="@style/dialogCancelBtn"
                android:layout_marginEnd="12dp"
                android:text="@string/btn_exit" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_retry"
                style="@style/dialogConfirmBtn"
                android:background="@drawable/btn_bg_large_warning"
                android:text="@string/btn_retry" />
        </LinearLayout>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>